hphp/test/zend/good/ext/spl/tests/bug48023.php.expectf

Fatal error: Class undefined: Foo in %s/bug48023.php on line 4
